testsuite/codegen/compile-fail/main-class-has-generics.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
// CHECK-L: main-class-has-generics.verona:${LINE:+1}:7: error: Class 'Main' must not be generic
class Main[X] {
  main() { }
}
